# mylink

./: .gitignore  CMakeLists.txt  README.md  custom_commands_macros.cmake
argh/: CMakeLists.txt
cli/: CMakeLists.txt  actions.h  actions_priv.h  cli.cpp  cli.h  main.cc  main.cpp  path_utils.cpp  path_utils.h  test_cli.cpp
cli/actions/: add.cpp  server.cpp
cli/parser/: parser_impl.cpp  parser_impl.h
cli/server/: CMakeLists.txt  bookmark_json_converter.cpp  bookmark_json_converter.h  server.cpp  server.h
cli/tests/: test_cli.cpp  test_server.cpp
envlib/: CMakeLists.txt  envlib.h  envlib_common.cpp  envlib_unix.cpp  envlib_win32.cpp
ext/: CMakeLists.txt
ext/argh/: CMakeLists.txt  test_argh.cc
ext/cpp-httplib/: CMakeLists.txt  httplib_include_helper.h  test_cpp-httplib.cpp
ext/json/: CMakeLists.txt  test_json.cpp
lib/: CMakeLists.txt  bookmark.hpp  collection.hpp  commandlineparser.cc  commandlineparser.hpp  markdown_collection.cc  markdown_collection.hpp
lib/include/: bookmark.h  collection.h  collection_storage.h  commandlineparser.h  markdown_collection.h  markdown_storage.h  storage_backend.h  stored_collection.h
lib/src/: bookmark.cpp  collection.cpp  collection_iterator.cpp  command_line_action_add.cpp  command_line_action_add.h  command_line_parsing.cpp  command_line_parsing.h  command_line_usage.cpp  commandlineparser.cpp  markdown_collection.cpp  markdown_export.cpp  markdown_import.cpp  markdown_storage.cpp  private_exceptions.h  stored_collection.cpp  virtual_collection.cpp
lib/src/command_line_parser/: action_add.cpp  action_add.h  command_line_parser.cpp  parser_impl.cpp  parser_impl.h
lib/src/markdown/: markdown_collection.cpp  markdown_export.cpp  markdown_import.cpp  markdown_storage.cpp  markdown_storage.h
lib/tests/: test_bookmark.cpp  test_cmdline.cpp  test_collection.cpp  test_markdown_collection.cpp  test_markdown_storage.cpp
lib/tests/test_utils/: mock_collection.h
server/: CMakeLists.txt  bookmarklet.js  main.cpp  server.cpp  server.h
server/tests/: test_server.cpp
server/www/: mylink.html  mylink.js
tests/: CMakeLists.txt  mock_storage_backend.cpp  mock_storage_backend.h  test_add.cc  test_add.cpp  test_argh.cc  test_bookmark.cpp  test_cmdline.cc  test_markdown_export.cpp  test_markdown_format.cpp  test_markdown_import.cpp
tests/utils/: ram_storage.cpp  ram_storage.h
www/: mylink.html
